--- a/conf/.tmux.conf
+++ b/conf/.tmux.conf
@@ -1,77 +1,89 @@
-#change prefix from C-b to C-a
-#unbind C-b
-#set -g prefix C-a
+# remap prefix from 'C-b' to 'C-a'
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
 
-#now we can issue keystrokes without delay
-set -sg escape-time 1
+# reload config file (change file location to your the tmux.conf you want to use)
+bind r source-file ~/.tmux.conf
 
-#change window index start from 0 to 1
-set -g base-index 1
+# split panes using | and -
+bind \\ split-window -h
+bind - split-window -v
+unbind '"'
+unbind %
 
-#change panes index start from 0 to 1
-setw -g pane-base-index 1
+# switch panes using Alt-arrow without prefix
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
 
-#prefix r to reload the configuration
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+# Enable mouse mode (tmux 2.1 and above)
+set -g mouse on
 
-#C-a C-a to send C-a to other applications
-bind C-a send-prefix
+# don't rename windows automatically
+set-option -g allow-rename off
 
-#prefix h to horizontal split panes
-bind h split-window -h
-
-#prefix v to vertical split panes
-bind v split-window -v
-
-#resize panes
-bind H resize-pane -L 5
-bind J resize-pane -D 5
-bind K resize-pane -U 5
-bind L resize-pane -R 5
-
-#mouse
-setw -g mouse on
-
-#theme
-#set -g default-terminal "tmux-256color"
-set -g default-terminal "screen-256color"
-#set-option -ga terminal-overrides ",xterm-256color:Tc"
-
-#-------------------------------------------------------#
-##STATUS LINE/MESSAGES AT BOTTOM
-#-------------------------------------------------------#
-#set -g status-right '#H'
-
-#-------------------------------------------------------#
-#Pane colours
-#-------------------------------------------------------#
-# set inactive/active window styles
-#set -g window-style "fg=default,bg=default"
-#set -g window-active-style 'fg=default,bg=default'
-
-#pane border
-#set -g pane-border-bg colour235
-#set -g pane-border-fg colour238
-#set -g pane-active-border-bg colour236
-#set -g pane-active-border-fg colour51
-
-# Split panes
-#bind-key "/" split-window -h -c "#{pane_current_path}"
-
-bind-key C-t new-window -c "#{pane_current_path}" -n tig "tig status"
-
-# tmux plugin manager - Put this at the bottom of .tmux.conf:
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-pain-control'
+#+------------------ START themes ------------------+
 # Themes - Nord
-set -g @plugin 'arcticicestudio/nord-tmux'
-
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'git@github.com/user/plugin'
-# set -g @plugin 'git@bitbucket.com/user/plugin'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+set-option -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g status-left-length 32
+set -g status-right-length 150
+set -g window-status-activity-style bold
+set -g pane-border-style fg=colour245
+set -g pane-active-border-style fg=cyan
+#+--------+
+#+ Status +
+#+--------+
+#+--- Layout ---+
+set -g status-justify left
+#+--- Colors ---+
+# set -g status-bg black
+# set -g status-fg white
+# set -g status none
+# set -g status none
+set -g status-style fg=white,none,bg=black
+#+--- Bars ---+
+set -g status-left "#[fg=black,bg=blue,bold] #S #[fg=blue,bg=black,nobold,noitalics,nounderscore]"
+set -g status-right "\
+#{prefix_highlight}\
+#[fg=white] #(~/.dotfiles/bin/input_source)\
+#[fg=brightblack,bg=black,nobold,noitalics,nounderscore] \
+#[fg=white,bg=brightblack] %Y-%m-%d \
+#[fg=white,bg=brightblack,nobold,noitalics,nounderscore]\
+#[fg=white,bg=brightblack] %H:%M "
+set -g window-status-format "#[fg=white,bg=colour234] #I #W "
+set -g window-status-current-format "\
+#[fg=colour234,bg=colour39] \
+#[fg=colour25,bg=colour39,noreverse,bold] #I  #W \
+#[fg=colour39,bg=colour234,nobold]"
+#+--- Windows ---+
+set -g window-status-format "\
+#[fg=black,bg=brightblack,nobold,noitalics,nounderscore] \
+#[fg=white,bg=brightblack]#I \
+#[fg=white,bg=brightblack,nobold,noitalics,nounderscore] \
+#[fg=white,bg=brightblack]#W #F \
+#[fg=brightblack,bg=black,nobold,noitalics,nounderscore]"
+set -g window-status-current-format "\
+#[fg=black,bg=cyan,nobold,noitalics,nounderscore] \
+#[fg=black,bg=cyan]#I #[fg=black,bg=cyan,nobold,noitalics,nounderscore] \
+#[fg=black,bg=cyan]#W #F #[fg=cyan,bg=black,nobold,noitalics,nounderscore]"
+set -g window-status-separator ""
+#+------------+
+#+ Clock Mode +
+#+------------+
+setw -g clock-mode-colour cyan
+#+----------+
+#+ Messages +
+#+---------+
+#set -g message-fg colour16
+#set -g message-bg colour221
+set -g message-style bold
+# set -g message-fg cyan
+# set -g message-bg brightblack
+# set -g message-command-fg cyan
+# set -g message-command-bg brightblack
+set -g message-style bg=cyan,fg=brightblack
+set -g message-command-style bg=cyan,fg=brightblack
+#+------------------ END themes ------------------+
